# prototyping-crates

./: README.md
audio-library/: Cargo.toml
audio-library/src/: error.rs  lib.rs  library.rs  main.rs  source.rs  track.rs
audio-library/src/inference/: mod.rs
audio-library/src/sources/: local.rs  metadata.rs  mod.rs  result.rs  source.rs  traits.rs  type.rs
audio-library/src/sources/directory/: directory.rs  mod.rs  options.rs  structure.rs  track_iterator.rs
audio-library/src/sources/jellyfin/: jellyfin.rs  mod.rs
audio-library/src/track/: issues.rs  metadata.rs  mod.rs  reader.rs  track.rs
audio-library/tests/: test_library.rs  test_source.rs
audio-library/tests/data/messy-library/: Aba Daba Honeymoon - Collins and Harlan (1914).m4a
test-server/: Cargo.toml
test-server/headless/: Cargo.toml
test-server/server-lib/src/: api.rs
test-server/src/: error.rs  event.rs  lib.rs  server.rs
test-server/src/local/: server.rs  track.rs
test-server/src/remote/: mod.rs  server.rs  track.rs
test-server/src/traits/: track.rs
test-server/tests/: test_server.rs
tokio-binary-protocol/: Cargo.toml  README.md
tokio-binary-protocol/client/: Cargo.toml
tokio-binary-protocol/client/src/: main.rs
tokio-binary-protocol/common/: Cargo.toml
tokio-binary-protocol/common/src/: env_var.rs  lib.rs  payload.rs
tokio-binary-protocol/scripts/: umm.py
tokio-binary-protocol/server/: Cargo.toml
tokio-binary-protocol/server/src/: error.rs  main.rs
