[workspace]
resolver = "3"
members = ["client", "common", "server"]

[workspace.dependencies]
log = "0.4.29"
env_logger = "0.11.10"
serde = "1.0.228"
futures = "0.3.32"
postcard = {version = "1.1.3", features = ["use-std"]}
tokio-util = {version = "0.7.18", features = ["codec"]}
tokio = {version = "1.52.3", features = ["rt-multi-thread", "macros", "net"]}