[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }

log = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true}
postcard = { workspace = true }
tokio-util = { workspace = true }
tokio = { workspace = true, features = ["time"] }